2008-07-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* puresize.h (PURESIZE_CHECKING_RATIO): New macro.
	(PURESIZE): Use it.

2008-07-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* m/amdx86-64.h (HAVE_LIB64_DIR): Consolidate ifdefs.
	* m/alpha.h (TEXT_END):
	* m/ibmrs6000.h (TEXT_END):
	* m/macppc.h (TEXT_END):
	* s/darwin.h (TEXT_END):
	* s/msdos.h (TEXT_END): Remove, unused.
	* s/gnu-linux.h (BSD_PGRPS): Add a comment.
	* s/cygwin.h: Remove comment.

	* ecrt0.c (NODOT_GLOBAL_START): Remove code, unused.
	(DOT_GLOBAL_START): Remove conditional, redundant for CRT0_DUMMIES.
	* m/intel386.h (DOT_GLOBAL_START):
	* m/vax.h (DOT_GLOBAL_START): Remove, redundant with CRT0_DUMMIES.
	(USG): Remove, file not used on USG platforms.

	* Makefile.in (HAVE_X11): Remove empty #else.

2008-07-24  Andreas Schwab  <schwab@suse.de>

	* fileio.c (Finsert_file_contents): Properly adjust undo list
	after format conversion.

2008-07-24  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (xg_get_font_name): Cast w to GTK_FONT_SELECTION_DIALOG.
	(menu_nav_ended): Remove.
	(create_menus): Remove signal connect for menu_nav_ended.
	(xg_update_menubar): Also take deactivate_cb as parameter, pass it to
	create_menus.
	(xg_modify_menubar_widgets): Pass deactivate_cb to xg_update_menubar.

2008-07-23  Jason Rumney  <jasonr@gnu.org>

	* w32font.c (w32_enumfont_pattern_entity): Return height consistent
	with opened font.
	(w32font_open): Set font type to gdi.

	* w32uniscribe.c (uniscribe_open): Set font type to uniscribe.

2008-07-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* s/usg5-4.h (ADDR_CORRECT): Remove, unused.
	* unexaix.c (ADDR_CORRECT): Remove conditional, the only user
	defines it.
	* unexec.c (ADDR_CORRECT): Define unconditionally.

	* m/ibmrs6000.h (C_SWITCH_MACHINE): Remove.

	* unexec.c: Remove code depending on !COFF and USG, the file is
	not used for such systems.

	* s/netbsd.h (A_TEXT_OFFSET, A_TEXT_SEEK):
	* s/freebsd.h (A_TEXT_OFFSET, A_TEXT_SEEK): Remove, unused.